--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -16,12 +16,19 @@
   </ng-container>
 
   <ng-template #photosTemplate>
-    <app-photo-gallery-tile *ngFor="let photo of photos" [photo]="photo" />
+    <mat-grid-list cols="3" rowHeight="2:1">
+      <mat-grid-tile *ngFor="let photo of photos">
+        <app-photo-gallery-tile [photo]="photo" />
+      </mat-grid-tile>
+    </mat-grid-list>
   </ng-template>
 
-  <div class="paginator">
-    <button class="minusPageButton" (click)="minusPage()">&lt;</button>
-    <span class="pageIndex">{{ pageIndex() }}</span>
-    <button class="plusPageButton" (click)="plusPage()">&gt;</button>
-  </div>
+  <mat-paginator
+    (page)="changedPage($event)"
+    [length]="totalQuantityOfPhotos"
+    [pageSize]="photosPerPage()"
+    [pageSizeOptions]="[3, 6, 9, 12]"
+    aria-label="Select page"
+  >
+  </mat-paginator>
 </div>
