--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,6 @@ body {
   box-sizing: border-box;
   outline: none;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
