--- a/src/app/components/photo-gallery-tile/photo-gallery-tile.component.scss
+++ b/src/app/components/photo-gallery-tile/photo-gallery-tile.component.scss
@@ -7,8 +7,8 @@
 }
 
 .photo {
-  width: 15rem;
-  height: 15rem;
+  width: 100%;
+  aspect-ratio: 1;
   object-fit: fill;
   object-position: center;
   transition: all 0.2s ease-in-out;
