Fixed typography issues and added dark/light theme switcher with store

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,11 @@
 <div class="container">
-  <span class="header-title">{{ headerText() }}</span>
+  <p class="header-title mat-display-large">
+    {{ headerText() }}
+  </p>
+  <button mat-icon-button class="darkModeSwitchIcon" (click)="switchTheme()">
+    <mat-icon *ngIf="checked(); else lightmode" fontIcon="dark_mode"></mat-icon>
+    <ng-template #lightmode>
+      <mat-icon fontIcon="light_mode"></mat-icon>
+    </ng-template>
+  </button>
 </div>
