--- a/src/app/components/photo-gallery-tile/photo-gallery-tile.component.html
+++ b/src/app/components/photo-gallery-tile/photo-gallery-tile.component.html
@@ -8,8 +8,8 @@
 
   <!-- todo add photo menu -->
   <div class="menu" *ngIf="showMenu()">
-    <span class="material-icons show-photo-button">crop_free</span>
-    <span class="material-icons like-photo-button">favorite</span>
-    <span class="material-icons info-photo-button">info</span>
+    <mat-icon class="show-photo-button" fontIcon="crop_free"></mat-icon>
+    <mat-icon class="like-photo-button" fontIcon="favorite"></mat-icon>
+    <mat-icon class="info-photo-button" fontIcon="info"></mat-icon>
   </div>
 </div>
