--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,24 +1,27 @@
-.header-title {
-  padding-inline: 1rem;
-  font-size: 2.5rem;
-  font-family: "Rubik", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: bold;
-  font-style: normal;
-  color: var(--primary-color);
-
-  padding-inline: 1rem;
-  padding-block: 1rem;
-  background-color: var(--accent-color);
-  border: 0.2rem solid var(--text-color);
-  box-shadow: 1rem 1rem 0px var(--text-color);
-}
-
 .container {
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
   padding-block: 1rem;
   padding-inline: 1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+}
+
+.header-title {
+  padding-inline: 1rem;
+  padding-block: 1rem;
+  margin: 0;
+}
+
+.darkModeSwitchIcon {
+  font-size: xx-large;
+  width: 3rem;
+  border-radius: 50%;
+  border: none;
+  aspect-ratio: 1;
+  transition: transform 0.1s ease-in-out;
+  &:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+  }
 }
