--- a/src/app/components/photo-gallery-tile/photo-gallery-tile.component.scss
+++ b/src/app/components/photo-gallery-tile/photo-gallery-tile.component.scss
@@ -18,7 +18,8 @@
   z-index: 200;
   width: 100%;
   height: 4rem;
-  background-color: rgba(0, 0, 0, 0.788);
+  background-color: var(--mat-sys-on-surface);
+  color: var(--mat-sys-surface);
   position: absolute;
   bottom: 0;
   left: 0;
@@ -32,7 +33,6 @@
 .info-photo-button {
   display: grid;
   place-items: center;
-  color: var(--accent-color);
   width: 2rem;
   aspect-ratio: 1;
   cursor: pointer;
