--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,37 +1,44 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
 @use "@angular/material" as mat;
 
-$primary-palette: mat.define-palette(mat.$indigo-palette);
-$accent-palette: mat.define-palette(mat.$pink-palette);
-$warn-palette: mat.define-palette(mat.$red-palette);
-
-// Definicja motywu
-$theme: mat.define-light-theme(
+$theme: mat.define-theme(
   (
     color: (
-      primary: $primary-palette,
-      accent: $accent-palette,
-      warn: $warn-palette,
+      theme-type: color-scheme,
+      primary: mat.$azure-palette,
+      tertiary: mat.$blue-palette,
+    ),
+    typography: (
+      plain-family: Rubik,
+      brand-family: Rubik,
+      bold-weight: 900,
+      medium-weight: 500,
+      regular-weight: 300,
+    ),
+    density: (
+      scale: 0,
     ),
   )
 );
 
-:root {
-  --primary-color: #2a182e;
-  --accent-color: #f2bf27;
-  --accent-dark-color: #ba921b;
-  --accent-light-color: #ffe8a3;
-
-  --warn-color: #f27052;
-  --background-color: #fdf7f0;
-  --text-color: #333;
-  --shadow-color: #979797;
-  --shadow-light-color: #cbc9c9;
+html {
+  color-scheme: dark;
+  @include mat.core();
+  @include mat.all-component-themes($theme);
 }
+
+@include mat.typography-hierarchy($theme);
 
 html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+}
+
+body {
+  margin: 0;
   background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
 }
@@ -40,14 +47,3 @@ body {
   box-sizing: border-box;
   outline: none;
 }
-
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-@include mat.all-component-themes($theme);
