--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,34 +1,22 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use "@angular/material" as mat;
-
-$theme: mat.define-theme(
-  (
-    color: (
-      theme-type: color-scheme,
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: (
-      plain-family: Rubik,
-      brand-family: Rubik,
-      bold-weight: 900,
-      medium-weight: 500,
-      regular-weight: 300,
-    ),
-    density: (
-      scale: 0,
-    ),
-  )
-);
+@use "../theme-colors" as my-theme;
 
 html {
-  color-scheme: dark;
-  @include mat.core();
-  @include mat.all-component-themes($theme);
+  color-scheme: light dark;
+  font-family: Rubik;
+  @include mat.theme(
+    (
+      color: (
+        primary: my-theme.$primary-palette,
+        tertiary: my-theme.$tertiary-palette,
+      ),
+      typography: Roboto,
+      density: 0,
+    )
+  );
 }
-
-@include mat.typography-hierarchy($theme);
 
 html,
 body {
