--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <app-header [headerText]="title"></app-header>
-<app-gallery></app-gallery>
+<mat-tab-group>
+  <mat-tab class="menuItem" label="Gallery"
+    ><app-gallery></app-gallery
+  ></mat-tab>
+  <mat-tab class="menuItem" label="Favorites"
+    ><app-favorites></app-favorites
+  ></mat-tab>
+</mat-tab-group>
+
 <app-footer></app-footer>
