--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,10 +7,19 @@
   margin-bottom: 1rem;
 }
 
+.header-with-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: auto;
+}
+
 .header-title {
   padding-inline: 1rem;
   padding-block: 1rem;
   margin: 0;
+  font-weight: bold;
+  font-size: 2.5rem;
 }
 
 .darkModeSwitchIcon {
