--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,4 @@
-<p>footer works!</p>
+<div class="container">
+  <div class="copyrights">© 2025-{{ currentYear }} Paweł Durczak</div>
+  <div class="socials"></div>
+</div>
