Changed tooltip placement and gallery tiles to round edges

--- a/src/app/components/photo-gallery-tile/photo-gallery-tile.component.html
+++ b/src/app/components/photo-gallery-tile/photo-gallery-tile.component.html
@@ -13,7 +13,7 @@
       fontIcon="crop_free"
       #tooltip="matTooltip"
       matTooltip="Show details"
-      matTooltipPosition="above"
+      matTooltipPosition="left"
     ></mat-icon>
 
     <mat-icon
@@ -42,7 +42,7 @@
       fontIcon="info"
       #tooltip="matTooltip"
       [matTooltip]="photo.description"
-      matTooltipPosition="above"
+      matTooltipPosition="right"
     ></mat-icon>
   </div>
 </div>
