--- a/src/app/components/photo-gallery-tile/photo-gallery-tile.component.scss
+++ b/src/app/components/photo-gallery-tile/photo-gallery-tile.component.scss
@@ -12,6 +12,8 @@
   object-fit: fill;
   object-position: center;
   transition: all 0.2s ease-in-out;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 5px var(--mat-sys-on-surface);
 }
 
 .menu {
@@ -26,6 +28,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  border-radius: 0.5rem;
 }
 
 .show-photo-button,
@@ -36,4 +39,8 @@
   width: 2rem;
   aspect-ratio: 1;
   cursor: pointer;
+  transition: transform 0.15s ease-in-out;
+  &:hover {
+    transform: scale(1.2);
+  }
 }
