--- a/src/app/views/favorites/favorites.component.scss
+++ b/src/app/views/favorites/favorites.component.scss
@@ -1,6 +1,6 @@
 .container,
 .skeleton {
-  margin: 1rem auto 0;
+  margin: 2rem auto 2rem;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(3, 1fr);
@@ -11,9 +11,4 @@
 }
 .skeleton {
   opacity: 50%;
-}
-
-.paginator {
-  width: 100%;
-  grid-column: 1/-1;
 }
