--- a/src/app/views/gallery/gallery.component.scss
+++ b/src/app/views/gallery/gallery.component.scss
@@ -1,6 +1,6 @@
 .container,
 .skeleton {
-  margin: 1rem auto 0;
+  margin: 2rem auto 2rem;
   display: grid;
   place-items: center;
   grid-template-columns: repeat(3, 1fr);
