--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,11 +33,14 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
 }
 
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
 }
