Removed unused code

--- a/src/app/views/favorites/favorites.component.html
+++ b/src/app/views/favorites/favorites.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <ng-container *ngIf="loading(); else photosTemplate">
     <ngx-skeleton-loader
-      [count]="photosPerPage()"
+      [count]="6"
       animation="pulse"
       appearance="circle"
       class="skeleton"
