--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -1,32 +1,19 @@
-<div class="container">
-  <ng-container *ngIf="loading(); else photosTemplate">
-    <ngx-skeleton-loader
-      [count]="photosPerPage()"
-      animation="pulse"
-      appearance="circle"
-      class="skeleton"
-      [theme]="{
-        width: '100%',
-        paddingBottom:'100%',
-        aspectRatio:'1/1',
-        borderRadius: '0px',
-        margin: '0px',
-        backgroundColor: 'var(--mat-sys-secondary)',
-      }"
-    />
-  </ng-container>
+<ng-container *ngIf="loading(); else photosTemplate">
+  <!-- todo loader -->
+</ng-container>
 
-  <ng-template #photosTemplate>
+<ng-template #photosTemplate>
+  <div class="gallery-container">
     <app-photo-gallery-tile *ngFor="let photo of photos" [photo]="photo" />
-  </ng-template>
+  </div>
+</ng-template>
 
-  <mat-paginator
-    (page)="changedPage($event)"
-    [length]="totalQuantityOfPhotos"
-    [pageSize]="photosPerPage()"
-    [pageSizeOptions]="[3, 6, 9, 12]"
-    aria-label="Select page"
-    class="paginator"
-  >
-  </mat-paginator>
-</div>
+<mat-paginator
+  (page)="changedPage($event)"
+  [length]="totalQuantityOfPhotos"
+  [pageSize]="photosPerPage()"
+  [pageSizeOptions]="[3, 6, 9, 12]"
+  aria-label="Select page"
+  class="paginator"
+>
+</mat-paginator>
