--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="loading(); else photosTemplate">
-  <!-- todo loader -->
+  <!-- todo loading -->
 </ng-container>
 
 <ng-template #photosTemplate>
