--- a/src/app/components/photo-view-dialog/photo-view-dialog.component.scss
+++ b/src/app/components/photo-view-dialog/photo-view-dialog.component.scss
@@ -1,17 +1,4 @@
 @use "@angular/material" as mat;
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1.5rem 2rem 0.5rem 1.5rem;
-}
-
-.title {
-  font-size: 1.5rem;
-  width: 25rem;
-  min-width: 25rem;
-  text-align: start;
-}
 
 .like-photo-button,
 .download-photo-button {
@@ -22,23 +9,59 @@
   }
 }
 
-.content {
+.container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 1rem;
   align-items: start;
-  padding: 0 0 1.5rem 1.5rem;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  width: 100%;
+  gap: 0.7rem;
+  padding: 1.5rem 0 1rem 1.5rem;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.8rem;
+  // line-height: 2rem;
+  width: 90%;
 }
 
 .description {
-  max-width: 20rem;
+  width: 65%;
+  line-height: 1.7rem;
+}
+
+.photo-container {
+  width: 100%;
+  padding-inline: 1.5rem;
 }
 
 .photo {
-  width: 30rem;
-  height: 30rem;
-  object-fit: cover;
+  width: 100%;
+  aspect-ratio: 1;
+  object-fit: fill;
   object-position: center;
   border-radius: 1rem;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  padding: 1.5rem 0;
+}
+
+.photo-button {
+  &:hover {
+    transform: scale(1.2);
+  }
 }
