Beautify dark mode switcher

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       {{ headerText() }}
     </p>
   </div>
-  <button mat-icon-button class="darkModeSwitchIcon" (click)="switchTheme()">
+  <button mat-icon-button class="dark-mode-switch-icon" (click)="switchTheme()">
     <mat-icon
       *ngIf="checked(); else lightmode"
       fontIcon="dark_mode"
