Added highlight directive and truncate title pipe

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="header-with-menu">
-    <p class="header-title">
+    <p class="header-title" appHighlightOnHover>
       {{ headerText() }}
     </p>
   </div>
