--- a/src/app/components/photo-view-dialog/photo-view-dialog.component.html
+++ b/src/app/components/photo-view-dialog/photo-view-dialog.component.html
@@ -3,15 +3,15 @@
     <span
       class="title"
       #tooltip="matTooltip"
-      [matTooltip]="photo()?.title"
+      [matTooltip]="photo().title"
       matTooltipPosition="above"
-      >{{ photo()?.title | truncateTitle }}</span
+      >{{ photo().title | truncateTitle }}</span
     >
-    <span class="description">{{ photo()?.description }}</span>
+    <span class="description">{{ photo().description }}</span>
   </div>
 
   <div class="photo-container">
-    <img [src]="photo()?.url" alt="Photo" class="photo" />
+    <img [src]="photo().url" alt="Photo" class="photo" />
   </div>
 
   <div class="buttons-container">
