Added placeholder when there is none photos liked and improved UX on photo menu drawer

--- a/src/app/components/photo-gallery-tile/photo-gallery-tile.component.html
+++ b/src/app/components/photo-gallery-tile/photo-gallery-tile.component.html
@@ -6,7 +6,7 @@
 >
   <img [src]="photo.url" alt="Photo" class="photo" />
 
-  <div class="menu" *ngIf="showMenu()">
+  <div class="menu">
     <mat-icon
       class="show-photo-button"
       (click)="openDialog('100ms', '100ms')"
