--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 body {
@@ -41,6 +41,7 @@ body {
   justify-content: space-between;
   background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
+  min-height: 100vh;
 }
 
 * {
